Close dropdown on clear button click in Bootstrap 5

--- a/tests/bootstrap4.html
+++ b/tests/bootstrap4.html
@@ -326,6 +326,19 @@
       </select>
     </div>
   </div>
+
+  <hr>
+  <div class="form-group row">
+    <label class="col-lg-4 control-label">allow clear and prevent menu open</label>
+    <div class="col-lg-8">
+      <select id="allow-clear" class="selectpicker" data-allow-clear="true">
+        <option>One</option>
+        <option>Two</option>
+        <option>Three</option>
+      </select>
+    </div>
+  </div>
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
